--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "react-pizza-project",
+  "name": "yocaza",
   "version": "1.0.0",
-  "description": "React pizza ordering project for DecodeMTL bootcamp",
-  "main": "index.js",
+  "description": "feature tools generator",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --watch"
+    "dev": "webpack --watch",
+    "production": "webpack --config webpack.config.production.js"
   },
   "repository": {
     "type": "git",
@@ -23,14 +24,11 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "bootstrap": "^3.3.6",
     "css-loader": "^0.23.1",
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
-    "mandrill": "^0.1.0",
     "parse": "^1.7.1",
     "react": "^0.14.7",
-    "react-burger-menu": "^1.5.6",
     "react-dom": "^0.14.7",
     "react-dropzone": "^3.3.2",
     "react-geosuggest": "^1.18.1",
@@ -38,7 +36,6 @@
     "react-router": "^2.0.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
-    "wkhtmltopdf": "^0.1.5"
+    "webpack": "^1.12.14"
   }
 }
